--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^2.4.1
   firebase_auth: ^4.2.2
   cloud_firestore: ^4.3.1
+  infinite_listview: ^1.1.0
 
 dev_dependencies:
   flutter_test:
