--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -15,9 +15,9 @@
 	<key>BUNDLE_ID</key>
 	<string>com.example.dailylog</string>
 	<key>PROJECT_ID</key>
-	<string>dailynote-220317</string>
+	<string>diem-5a68c</string>
 	<key>STORAGE_BUCKET</key>
-	<string>dailynote-220317.appspot.com</string>
+	<string>diem-5a68c.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
